--- a/packages/SlimSettings/res/drawable-nodpi/ic_settings_interface.xml
+++ b/packages/SlimSettings/res/drawable-nodpi/ic_settings_interface.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright (C) 2012-2016 SlimRoms Project
+    Copyright (C) 2012-2017 SlimRoms Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -15,20 +15,11 @@
     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
     <path
         android:fillColor="#FFFFFFFF"
-        android:pathData="M6.44 0.87512c-0.98-0.05-1.84 0.83998-1.69 1.82 0.01 6.36-0.01 12.72 0.01 19.08
-0.11 0.97 1.16 1.46 2.05 1.35 3.64-0.01 7.28 0.01 10.93-0.01 0.91-0.04 1.65-0.91
-1.51-1.81 0-6.36
-0.01-12.72-0.01-19.08-0.11-0.9799-1.16-1.4599-2.05-1.3499l-10.75 0.00002zm-1.02
-1.29h13.16c0.04 2.55 0.01 5.16 0.02 7.73v11c-0.04 0.28-0.01 0.63-0.02
-0.94h-13.16v-19.67zm0.82 0.8v6.4h11.52v-6.4h-11.52zm0
-7.6399v2.99h5.19v-2.99h-5.19zm6.3 0v2.99h5.22v-2.99h-5.22zm-6.3
-4.24v1.85h11.52v-1.85h-11.52zm0 3.09v3.09h5.15v-3.09h-5.15zm6.33
-0v3.09h5.19v-3.09h-5.19z" />
+        android:pathData="M7,2.8v13.1c0,0.6 0.4,1 1,1h13.1c0.6,0 1,0.4 1,1V21c0,0.6 -0.4,1 -1,1H2.9c-0.6,0 -1,-0.4 -1,-1V2.8c0,-0.6 0.4,-1 1,-1H6C6.5,1.8 7,2.2 7,2.8zM9.3,2.8v10.8c0,0.6 0.4,1 1,1h10.8c0.6,0 1,-0.4 1,-1V2.8c0,-0.6 -0.4,-1 -1,-1H10.3C9.7,1.8 9.3,2.2 9.3,2.8z"/>
 </vector>
