--- a/packages/SlimSettings/res/drawable-nodpi/ic_settings_navigation.xml
+++ b/packages/SlimSettings/res/drawable-nodpi/ic_settings_navigation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright (c) 2016 SlimRoms Ltd.
+    Copyright (c) 2016-2017 SlimRoms Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -15,12 +15,21 @@
     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="96.0"
-    android:viewportHeight="96.0">
-
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
     <path
         android:fillColor="#FFFFFFFF"
-        android:pathData="M65.64,8L65.64,16.12L19.57,16.12L19.57,21.52L65.64,21.52L65.64,29.64L76.43,18.82L65.64,8zM34.53,37.49L16.57,47.6L34.53,57.7L34.53,37.49zM46.88,37.49C41.3,37.49 36.78,42.02 36.78,47.6C36.78,53.17 41.3,57.7 46.88,57.7C52.45,57.7 56.98,53.17 56.98,47.6C56.98,42.02 52.45,37.49 46.88,37.49zM61.47,37.49C60.23,37.49 59.22,38.51 59.22,39.74L59.22,55.45C59.22,56.69 60.23,57.7 61.47,57.7L77.18,57.7C78.42,57.7 79.43,56.69 79.43,55.45L79.43,39.74C79.43,38.51 78.42,37.49 77.18,37.49L61.47,37.49zM46.88,39.52C51.34,39.52 54.96,43.13 54.96,47.6C54.96,52.06 51.34,55.68 46.88,55.68C42.41,55.68 38.8,52.06 38.8,47.6C38.8,43.13 42.41,39.52 46.88,39.52zM61.47,39.74L77.18,39.74L77.18,55.45L61.47,55.45L61.47,39.74zM32.29,41.29L32.29,53.92L21.06,47.6L32.29,41.29zM30.36,66.36L19.57,77.18L30.36,88L30.36,79.88L76.43,79.88L76.43,74.48L30.36,74.48L30.36,66.36z" />
+        android:pathData="M4,12c0,-1.5 0.4,-3 1,-4.3H2.5C2,9 1.7,10.5 1.7,12c0,1.5 0.3,3 0.8,4.3H5C4.4,15 4,13.5 4,12z"/>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M8.1,12c0,-1.7 0.7,-3.2 1.9,-4.3H6.8C6.1,9 5.6,10.4 5.6,12s0.4,3 1.2,4.3H10C8.8,15.2 8.1,13.7 8.1,12z"/>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M14,12m-4.3,0a4.3,4.3 0,1 1,8.6 0a4.3,4.3 0,1 1,-8.6 0"/>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M19.8,12c0,1.7 -0.7,3.2 -1.9,4.3h3.1c0.8,-1.3 1.2,-2.7 1.2,-4.3s-0.4,-3 -1.2,-4.3H18C19.1,8.8 19.8,10.3 19.8,12z"/>
 </vector>
+
